--- a/glsl_first_step.html
+++ b/glsl_first_step.html
@@ -1,3 +1,34 @@
+<html>
+  <head><title>Three.jsでシェーダを利用する最小限のサンプル</title></head>
+  <body>
+
+<!-- フラグメントシェーダ -->
+<script id="fragment_shader" type="x-shader/x-fragment">
+precision highp float;
+uniform float time;
+uniform vec2 resolution;
+
+void main(void) {
+  gl_FragColor = vec4(
+    gl_FragCoord.x / resolution.x, 
+    gl_FragCoord.y / resolution.y, 
+    abs(sin(time * 0.001)), 1.0);
+}
+</script>
+
+<!-- 頂点シェーダ -->
+<script id="vertex_shader" type="x-shader/x-vertex">
+uniform float time;
+uniform vec2 resolution;
+void main(void) {
+  gl_Position = vec4(position, 1.0);
+}
+</script>
+
+<!-- Three.jsからシェーダを呼び出すJavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"
+  type="text/javascript"></script>
+<script type="text/javascript">
 var scene, camera, renderer;
 var geometry, material, mesh;
 var canvas;
@@ -38,3 +69,8 @@ function saveImage() {
   renderer.render(scene, camera);
   window.open(canvas.toDataURL());
 }
+</script>
+
+<p><input type="button" value="save image" onclick="saveImage();"></p>
+</body>
+</html>
