--- a/rebar_bars.html
+++ b/rebar_bars.html
@@ -2,21 +2,29 @@
   <head><title>Raymarching Sample</title></head>
   <body>
 <script id="fragment_shader" type="x-shader/x-fragment">
-precision highp float;
+precision mediump float;
 uniform float time;
+uniform vec2 mouse;
 uniform vec2 resolution;
 
-// 距離関数
-float distSphere(vec3 p, float r) {
-  return length(p) - r;
+vec2 onRep(vec2 p, float interval) {
+  return mod(p, interval) - interval * 0.5;
 }
 
-float distScene(vec3 p) {
-  return distSphere(p, 1.3);
+float distBar(vec2 p, float interval, float width) {
+  return length(max(abs(onRep(p, interval)) - width, 0.0));
 }
 
-// 法線の計算
-vec3 getNormal(vec3 p) {
+// distance function
+float distScene(vec3 p){
+  float bar_x = distBar(p.yz, 1.0, 0.1);
+  float bar_y = distBar(p.xz, 1.0, 0.1);
+  float bar_z = distBar(p.xy, 1.0, 0.1);
+
+  return min(min(bar_x, bar_y),bar_z);
+}
+
+vec3 getNormal(vec3 p){
   float d = 0.0001;
   return normalize(vec3(
     distScene(p + vec3(  d, 0.0, 0.0)) - distScene(p + vec3( -d, 0.0, 0.0)),
@@ -25,39 +33,41 @@ vec3 getNormal(vec3 p) {
   ));
 }
 
-void main(void) {
-  // gl_FragCoord のxy座標の -1.0〜1.0 への正規化
+void main(void){
+  // fragment position
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
-  // カメラとレイの定義
-  vec3 cPos = vec3(0.0, 1.6, -2.0);
-  vec3 cDir = normalize(vec3(0.0, -0.9, 1.0));
-  vec3 cUp  = cross(cDir, vec3(1.0, 0.0 ,0.0));
+  // camera and ray
+  vec3 cPos = vec3(0.0, 0.0, time * 0.001);
+  vec3 cUp  = normalize(vec3(0.1, 0.4, 0.0));
+  vec3 cDir = cross(cUp, vec3(-1.0, 0.0, 0.0));
   vec3 cSide = cross(cDir, cUp);
-  float targetDepth = 1.3;
+  float targetDepth = 1.0;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
-  // 距離関数を用いたレイのマーチングループ
+  // direction light
+  vec3 lightDir = normalize(vec3(1, 1, -2));
+
+  // marching loop
   float dist;
   float depth = 0.0;
   float eps = 0.001;
   vec3 dPos = cPos;
-  for(int i = 0; i < 32; i++){
+  for(int i = 0; i < 64; i++){
     dist = distScene(dPos);
     depth += dist;
     dPos = cPos + depth * ray;
     if (abs(dist) < eps) break;
   }
 
-  // 衝突判定の結果に応じたピクセル色の決定
-  vec3 lightDir = normalize(vec3(-3, 5, -2));
+  // hit check
   vec3 color;
-  if(abs(dist) < eps) {
+  if(abs(dist) < eps){
     vec3 normal = getNormal(dPos);
     float diffuse = clamp(dot(lightDir, normal), 0.1, 1.0);
     color = vec3(1.0, 1.0, 1.0) * diffuse;
-  } else {
-    color = vec3(1.0);
+  }else{
+    color = vec3(0.0);
   }
   gl_FragColor = vec4(color, 1.0);
 }
