--- a/glsl_first_step.html
+++ b/glsl_first_step.html
@@ -1,4 +1,5 @@
 <html>
+  <meta charset="utf-8">
   <head><title>Three.jsでシェーダを利用する最小限のサンプル</title></head>
   <body>
 
@@ -9,10 +10,8 @@ uniform float time;
 uniform vec2 resolution;
 
 void main(void) {
-  gl_FragColor = vec4(
-    gl_FragCoord.x / resolution.x, 
-    gl_FragCoord.y / resolution.y, 
-    abs(sin(time * 0.001)), 1.0);
+  gl_FragColor = 
+    vec4(gl_FragCoord.xy / resolution, abs(sin(time * 0.001)), 1.0);
 }
 </script>
 
