--- a/steel_frame_metal.html
+++ b/steel_frame_metal.html
@@ -66,7 +66,7 @@ void main(void) {
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
   // camera and ray
-  vec3 cPos = vec3(0.0, 0.0, time * 0.001);
+  vec3 cPos = vec3(0.0, 0.0, time);
   vec3 cUp  = normalize(vec3(0.1, 0.4, 0.0));
   vec3 cDir = cross(cUp, vec3(-1.0, 0.0, 0.0));
   vec3 cSide = cross(cDir, cUp);
