--- a/reflect.html
+++ b/reflect.html
@@ -110,7 +110,7 @@
       } else {
         color = vec3(0.1);
       }
-      return color - clamp(0.01 * depth, 0.0, 0.3);
+      return color - pow(clamp(0.05 * depth, 0.0, 0.6), 2.0);
     }
     
     void main(void) {
@@ -118,8 +118,8 @@
       vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
     
       // camera and ray
-      vec3 cPos  = vec3(0.0, 1.6, time);
-      vec3 cDir  = normalize(vec3(0.0, -0.9, 1.0));
+      vec3 cPos  = vec3(0.0, 0.0, time);
+      vec3 cDir  = normalize(vec3(0.0, -0.3, 1.0));
       vec3 cUp   = cross(cDir, vec3(1.0, 0.0 ,0.0));
       vec3 cSide = cross(cDir, cUp);
       float targetDepth = 1.3;
