--- a/reflect.html
+++ b/reflect.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Steel Frame</title>
+    <title>Reflect</title>
   </head>
   <body>
     <script id="fragment_shader" type="x-shader/x-fragment">
