--- a/reflect.html
+++ b/reflect.html
@@ -11,6 +11,7 @@
         font-size: 13px;
       }
       canvas {
+        padding-top: 60px;
         display: block;
         margin: auto;
       }
