--- a/reflect.html
+++ b/reflect.html
@@ -17,7 +17,7 @@
         color: white;
         font-size: 13px;
         position: absolute;
-        top: 10px;
+        bottom: 10px;
         width: 100%;
         text-align: center;
         z-index: 100;
