--- a/reflect.html
+++ b/reflect.html
@@ -11,7 +11,12 @@
       }
       canvas {
         display: block;
-        margin: 0 auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
       }
       p {
         color: white;
@@ -22,6 +27,7 @@
         text-align: center;
         z-index: 100;
       }
+      a { color: skyblue }
     </style>
   </head>
   <body>
